--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,36 @@ label {
   height: 527px;
 }
 
+.intro header.visble {
+  position: fixed;
+  z-index: 200;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.7);
+  padding: 8px 100%;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: header-down 0.2s 1 both;
+}
+
+@keyframes header-down {
+  from {
+    top: -20%;
+  }
+  to {
+    top: 0;
+  }
+}
+
+.intro header.visble nav ul li a {
+  padding: 0 10px;
+  font-size: 20px;
+  color: #000;
+}
+
+.intro header.visble .logo {
+  transform: translateY(0);
+}
 .header-con {
   display: flex;
   justify-content: space-between;
@@ -54,6 +84,7 @@ label {
 
 .logo img {
   cursor: pointer;
+  height: 56px;
 }
 
 nav ul {
@@ -390,6 +421,15 @@ footer {
 }
 
 @media (max-width: 768px) {
+  .intro header.visble nav ul li a {
+    color: #fff;
+    font-size: 20px;
+  }
+
+  .intro header.visble nav ul {
+    top: 57%;
+  }
+
   .prevent-con .content .way p {
     font-size: 20px;
   }
@@ -423,7 +463,7 @@ footer {
     padding: 10px 0;
   }
   nav ul li a {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
   }
   .logo img {
